--- a/src/project/PrinterControl/data/android/runTime.conf
+++ b/src/project/PrinterControl/data/android/runTime.conf
@@ -16,7 +16,7 @@ app.waitActivity=com.hp.printercontrol.base.PrinterControlActivity
 test.timeout.element=30
 test.result.folderPath=./../../../../result
 test.screenshot.folderPath=./../../../../result/screen
-test.uiMap.fileName=printerControl.xml
+test.uiMap.fileName=PrinterControl.xml
 
 
 
