--- a/project/IosExample/data/ios/runTime.conf
+++ b/project/IosExample/data/ios/runTime.conf
@@ -12,9 +12,7 @@ test.timeout.element = 60000
 app.interncat.IOS.ui=interncat.xml
 [args]
 test.timeout.element=30
-test.result.folderPath=./../../../../result
-test.screenshot.folderPath=./../../../../result/screen
-test.uiMap.fileName=WebExample.xml
+test.uiMap.fileName=uiMap.xml
 
 
 
