--- a/project/PrinterControl/data/android/runTime.conf
+++ b/project/PrinterControl/data/android/runTime.conf
@@ -14,9 +14,7 @@ app.activity=com.hp.printercontrol.base.PrinterControlActivity
 app.waitActivity=com.hp.printercontrol.base.PrinterControlActivity
 [args]
 test.timeout.element=30
-test.result.folderPath=./../../../../result
-test.screenshot.folderPath=./../../../../result/screen
-test.uiMap.fileName=PrinterControl.xml
+test.uiMap.fileName=uiMap.xml
 
 
 
