--- a/resources/conf/main.conf
+++ b/resources/conf/main.conf
@@ -1,5 +1,5 @@
-#[xxxxxx] < Project name
-#current.test.type = xxxxxxx  <  Here have a choice of android, ios and web.
+#[xxxxxx] > Project name
+#current.test.type = xxxxxxx  >  It has a choice of android, ios and web.
 
 [PrinterControl]
 current.test.type = android
