--- a/project/WebExample/data/web/runTime.conf
+++ b/project/WebExample/data/web/runTime.conf
@@ -1,8 +1,9 @@
 [caps]
+test.browserDriver.folderPath = ./../../../../browserDriver
 browser=firefox
 [args]
 test.timeout.element=30
-test.uiMap.fileName=WebExample.xml
+test.uiMap.fileName=uiMap.xml
 
 
 
