--- a/fwk/env/conf/main.conf
+++ b/fwk/env/conf/main.conf
@@ -1,3 +1,8 @@
+#[DefaultProject]   It represents which project will be executed when runnning start.py and createPageObjects.py.
+[DefaultProject]
+default.project = PrinterControl
+
+
 #[xxxxxx] > Project name
 #current.test.type = xxxxxxx  >  It has a choice of android, ios and web.
 
