--- a/fwk/env/conf/main.conf
+++ b/fwk/env/conf/main.conf
@@ -1,6 +1,6 @@
 #[DefaultProject]   It represents which project will be executed when runnning start.py and createPageObjects.py.
 [DefaultProject]
-default.project = WebExample
+default.project = PrinterControl
 
 
 #[xxxxxx] > Project name
