--- a/fwk/env/conf/main.conf
+++ b/fwk/env/conf/main.conf
@@ -1,5 +1,5 @@
 [DefaultProject]
-default.project = PrinterControl
+default.project = NewProject
 
 [PrinterControl]
 current.test.type = android
@@ -7,3 +7,6 @@ current.test.type = android
 [WebExample]
 current.test.type = web
 
+[NewProject]
+
+[NewProject]current.test.type=android
