--- a/fwk/env/conf/main.conf
+++ b/fwk/env/conf/main.conf
@@ -1,13 +1,9 @@
 [DefaultProject]
-default.project=NewProject
+default.project = WebExample
 
 [PrinterControl]
-current.test.type=android
+current.test.type = android
 
 [WebExample]
-current.test.type=web
-
-[NewProject]
-current.test.type=android
-
+current.test.type = web
 
