--- a/projects/PrinterControl/data/android/runTime.conf
+++ b/projects/PrinterControl/data/android/runTime.conf
@@ -4,8 +4,8 @@ app.path=./../../../app/apk/PrinterControl_debug.apk
 #app.device.version=5.0.2
 #app.device.version=6.0.1
 app.device.platformName=Android
-app.device.name=HC43YWW01974
-#app.device.name=06157df6b1e60d06
+#app.device.name=HC43YWW01974
+app.device.name=06157df6b1e60d06
 app.newCommand.timeout=240
 app.appium.serverIP=127.0.0.1
 app.appium.serverPort=4723
