--- a/fwk/env/conf/main.conf
+++ b/fwk/env/conf/main.conf
@@ -1,5 +1,5 @@
 [DefaultProject]
-default.project = Haha
+default.project = PrinterControl
 
 [PrinterControl]
 current.test.type = android
@@ -7,5 +7,4 @@ current.test.type = android
 [WebExample]
 current.test.type = web
 
-[Haha]
-current.test.type=android
+
