--- a/fwk/env/conf/main.conf
+++ b/fwk/env/conf/main.conf
@@ -1,10 +1,9 @@
 [DefaultProject]
-default.project = PrinterControl
+default.project = WebExample
 
 [PrinterControl]
 current.test.type = android
 
 [WebExample]
 current.test.type = web
-
 
