--- a/templates/PLACEHOLDER/data/ios/runTime.conf
+++ b/templates/PLACEHOLDER/data/ios/runTime.conf
@@ -1,6 +1,6 @@
-[sut]
+[caps]
 app.path=/Users/devicepass/Desktop/Payload/PostalSavingsBankOfChina.app
-app.device.version=9.3
+app.device.version=10.2.1
 app.device.platformName=IOS
 app.device.name=iPhone 6
 app.command.timeout= 2000
@@ -8,6 +8,7 @@ app.unicodeKeyboard = "True"
 app.resetKeyboard = "True"
 app.appium.serverIP=127.0.0.1:4723
 app.bundleIdentifier=com.yitong.ls
-app.udid=b66d1d31e2001d6c23e3a3d100afde8382ee2b49
-test.timeout.element = 60000
-app.yitongMbank.IOS.ui=yitongMbank.xml
+app.udid=7011ef102175c525567478c82c51ebef48aead70
+[args]
+test.timeout.element=30
+test.uiMap.fileName=uiMap.xml
