--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Appium-Python-Client==0.22
+#Appium-Python-Client==0.22
+Appium-Python-Client==0.24
 configparser==3.5.0
-selenium==2.53.6
-#selenium==3.4.2
-flask==0.12.1
+#selenium==2.53.6
+selenium==3.4.2
+flask==0.12.2
 openpyxl==2.4.7
