--- a/templates/PLACEHOLDER/data/ios/runTime.conf
+++ b/templates/PLACEHOLDER/data/ios/runTime.conf
@@ -1,14 +1,16 @@
 [caps]
-app.path=/Users/devicepass/Desktop/Payload/PostalSavingsBankOfChina.app
-app.device.version=10.2.1
+#app.path=./../../../app/app/RemoteControl.ipa
+app.path=/Volumes/D/RemoteControl.ipa
+app.device.version=10.3.2
 app.device.platformName=IOS
-app.device.name=iPhone 6
-app.command.timeout= 2000
+app.device.name=iPhone 7
+app.newCommand.timeout=240
 app.unicodeKeyboard = "True"
 app.resetKeyboard = "True"
-app.appium.serverIP=127.0.0.1:4723
-app.bundleIdentifier=com.yitong.ls
-app.udid=7011ef102175c525567478c82c51ebef48aead70
+app.appium.serverIP=10.10.52.52
+app.appium.serverPort=4723
+app.bundleId=com.hp.printercontrol
+app.udid=f7bbd1dc44901fb0773ca6adb9e4fbe3021ec217
 [args]
 test.timeout.element=30
 test.uiMap.fileName=uiMap.xml
