--- a/fwk/env/conf/main.conf
+++ b/fwk/env/conf/main.conf
@@ -1,5 +1,5 @@
 [DefaultProject]
-default.project = AAA
+default.project = PrinterControl
 
 [PrinterControl]
 current.test.type = android
@@ -9,5 +9,4 @@ current.test.type = web
 
 [IosExample]
 current.test.type = ios
-
 
