--- a/projects/WebExample/data/web/runTime.conf
+++ b/projects/WebExample/data/web/runTime.conf
@@ -1,5 +1,5 @@
 [caps]
-test.browserDriver.folderPath = ./../../../../browserDriver
+test.browserDriver.folderPath = ./../../../../script/browserDriver
 browser=firefox
 [args]
 test.timeout.element=30
