--- a/fwk/env/conf/main.conf
+++ b/fwk/env/conf/main.conf
@@ -1,5 +1,5 @@
 [DefaultProject]
-default.project = PrinterControl
+default.project = WebMultipleThreads
 
 [PrinterControl]
 current.test.type = android
@@ -9,4 +9,7 @@ current.test.type = web
 
 [IosExample]
 current.test.type = ios
+
+[WebMultipleThreads]
+current.test.type = web
 
