--- a/projects/PrinterControl/data/android/runTime.conf
+++ b/projects/PrinterControl/data/android/runTime.conf
@@ -1,5 +1,5 @@
 [caps]
-#app.path=./../../resources/data/app/PrinterControl_debug.apk
+#mobile.browser.name=chrome
 app.path=./../../../app/apk/PrinterControl_debug.apk
 #app.device.version=5.0.2
 #app.device.version=6.0.1
