--- a/templates/PLACEHOLDER/data/android/runTime.conf
+++ b/templates/PLACEHOLDER/data/android/runTime.conf
@@ -1,7 +1,10 @@
 [caps]
 # Your apk's path. It should write "./../../../app/apk/PrinterControl_debug.apk", if the path is "D:\Dev\DevicePass\script\app\apk\PrinterControl_debug.apk" when AutoTestPass at "D:\Dev\DevicePass\script\AutoTestPass".
 # You don't need 'app.path' if you test it in DevicePass.
+# If you want to test from mobile web, please remove the '#' at the beginning of '#mobile.browser.name=chrome' and add '#' at the begining of 'app.path=./../../../app/apk/PrinterControl_debug.apk'
+
 app.path=./../../../app/apk/PrinterControl_debug.apk
+#mobile.browser.name=chrome
 app.device.platformName=Android
 # Your device's uuid
 app.device.name=HC43YWW01974
