--- a/fwk/env/conf/main.conf
+++ b/fwk/env/conf/main.conf
@@ -1,5 +1,5 @@
 [DefaultProject]
-default.project = PrinterControl
+default.project = HPSmart
 
 [PrinterControl]
 current.test.type = android
@@ -13,3 +13,5 @@ current.test.type = ios
 [WebMultipleThreads]
 current.test.type = web
 
+[HPSmart]
+current.test.type=android
