--- a/fwk/env/conf/main.conf
+++ b/fwk/env/conf/main.conf
@@ -1,5 +1,5 @@
 [DefaultProject]
-default.project = HPSmart
+default.project = PrinterControl
 
 [PrinterControl]
 current.test.type = android
@@ -14,4 +14,5 @@ current.test.type = ios
 current.test.type = web
 
 [HPSmart]
-current.test.type=android
+current.test.type = android
+
