--- a/fwk/env/conf/main.conf
+++ b/fwk/env/conf/main.conf
@@ -1,5 +1,5 @@
 [DefaultProject]
-default.project = PrinterControl
+default.project = IosExample
 
 [PrinterControl]
 current.test.type = android
@@ -15,5 +15,4 @@ current.test.type = web
 
 [HPSmart]
 current.test.type = android
-
 
