--- a/templates/PLACEHOLDER/data/android/runTime.conf
+++ b/templates/PLACEHOLDER/data/android/runTime.conf
@@ -1,9 +1,10 @@
 [caps]
-# Your apk's path. It should write "./../../../app/apk/PrinterControl_debug.apk", if the path is "D:\Dev\DevicePass\script\app\apk\PrinterControl_debug.apk" when AutoTestPass at "D:\Dev\DevicePass\script\AutoTestPass".
-# You don't need 'app.path' if you test it in DevicePass.
-# If you want to test from mobile web, please remove the '#' at the beginning of '#mobile.browser.name=chrome' and add '#' at the begining of 'app.path=./../../../app/apk/PrinterControl_debug.apk'
-
+# For apk's path. It should write "./../../../app/apk/PrinterControl_debug.apk", if the path is "D:\Dev\DevicePass\script\app\apk\PrinterControl_debug.apk" when the AutoTestPass at "D:\Dev\DevicePass\script\AutoTestPass".
+# To test from mobile web, please remove the '#' at the beginning of '#mobile.browser.name=chrome' and separately add '#' at the begining of 'app.path=*', 'app.package=*', 'app.activity=*' and 'app.waitActivity=*'.
 app.path=./../../../app/apk/PrinterControl_debug.apk
+app.package=com.hp.printercontrol
+app.activity=com.hp.printercontrol.base.PrinterControlActivity
+app.waitActivity=com.hp.printercontrol.base.PrinterControlActivity
 #mobile.browser.name=chrome
 app.device.platformName=Android
 # Your device's uuid
@@ -12,9 +13,6 @@ app.device.name=HC43YWW01974
 app.newCommand.timeout=240
 app.appium.serverIP=127.0.0.1
 app.appium.serverPort=4723
-app.package=com.hp.printercontrol
-app.activity=com.hp.printercontrol.base.PrinterControlActivity
-app.waitActivity=com.hp.printercontrol.base.PrinterControlActivity
 [args]
 #Default timeout when you invoke waitForShown()
 test.timeout.element=30
