--- a/templates/PLACEHOLDER/data/ios/runTime.conf
+++ b/templates/PLACEHOLDER/data/ios/runTime.conf
@@ -1,6 +1,9 @@
+# For apk's path. It should write "./../../../app/app/RemoteControl.ipa", if the path is "D:\Dev\DevicePass\script\app\app\RemoteControl.ipa" when the AutoTestPass at "D:\Dev\DevicePass\script\AutoTestPass".
+# To test from mobile web, please remove the '#' at the beginning of '#mobile.browser.name=safari' and separately add '#' at the begining of 'app.path=*' and 'app.bundleId=*'.
 [caps]
-#app.path=./../../../app/app/RemoteControl.ipa
-app.path=/Volumes/D/RemoteControl.ipa
+app.path=./../../../app/app/RemoteControl.ipa
+app.bundleId=com.hp.printercontrol
+#mobile.browser.name=safari
 app.device.version=10.3.2
 app.device.platformName=IOS
 app.device.name=iPhone 7
@@ -9,7 +12,6 @@ app.unicodeKeyboard = "True"
 app.resetKeyboard = "True"
 app.appium.serverIP=10.10.52.52
 app.appium.serverPort=4723
-app.bundleId=com.hp.printercontrol
 app.udid=f7bbd1dc44901fb0773ca6adb9e4fbe3021ec217
 [args]
 test.timeout.element=30
