--- a/projects/HPSmart/data/android/runTime.conf
+++ b/projects/HPSmart/data/android/runTime.conf
@@ -1,6 +1,9 @@
 [caps]
 #app.path=./../../resources/data/app/PrinterControl_debug.apk
-app.path=./../../../app/apk/PrinterControl_googlestore_debug_develop_4.4.54.apk
+app.path=./../../../app/apk/HPSmart.apk
+app.package=com.hp.printercontrol
+app.activity=com.hp.printercontrol.base.PrinterControlActivity
+app.waitActivity=com.hp.printercontrol.base.PrinterControlActivity
 app.device.version=5.0.2
 #app.device.version=6.0.1
 app.device.platformName=Android
@@ -9,9 +12,6 @@ app.device.name=HC43YWW01974
 app.newCommand.timeout=240
 app.appium.serverIP=127.0.0.1
 app.appium.serverPort=4723
-app.package=com.hp.printercontrol
-app.activity=com.hp.printercontrol.base.PrinterControlActivity
-app.waitActivity=com.hp.printercontrol.base.PrinterControlActivity
 [args]
 test.timeout.element=30
 test.uiMap.fileName=uiMap.xml
