--- a/projects/HPSmart/data/android/runTime.conf
+++ b/projects/HPSmart/data/android/runTime.conf
@@ -4,7 +4,7 @@ app.path=./../../../app/apk/HPSmart.apk
 app.package=com.hp.printercontrol
 app.activity=com.hp.printercontrol.base.PrinterControlActivity
 app.waitActivity=com.hp.printercontrol.base.PrinterControlActivity
-app.device.version=5.0.2
+#app.device.version=5.0.2
 #app.device.version=6.0.1
 app.device.platformName=Android
 app.device.name=HC43YWW01974
