--- a/projects/HPSmartiOS/data/android/runTime.conf
+++ b/projects/HPSmartiOS/data/android/runTime.conf
@@ -19,6 +19,8 @@ app.waitActivity=com.hp.printercontrol.base.PrinterControlActivity
 #Default timeout when you invoke waitForShown()
 test.timeout.element=30
 test.uiMap.fileName=uiMap.xml
+test.language=zh_CN
+#en_US
 
 
 
