--- a/projects/HPSmartiOS/data/ios/runTime.conf
+++ b/projects/HPSmartiOS/data/ios/runTime.conf
@@ -14,3 +14,5 @@ app.udid=30a5c8edc1bacf533bf54db7dd90a03021cbeea1
 [args]
 test.timeout.element=30
 test.uiMap.fileName=uiMap.xml
+test.language=zh_CN
+#en_US
