--- a/projects/IosExample/data/ios/runTime.conf
+++ b/projects/IosExample/data/ios/runTime.conf
@@ -15,6 +15,5 @@ app.udid=f7bbd1dc44901fb0773ca6adb9e4fbe3021ec217
 [args]
 test.timeout.element=30
 test.uiMap.fileName=uiMap.xml
-
-
-# safari > advanced > web inspector
+test.language=zh_CN
+#en_US
