--- a/projects/PrinterControl/data/android/runTime.conf
+++ b/projects/PrinterControl/data/android/runTime.conf
@@ -15,3 +15,5 @@ app.waitActivity=com.hp.printercontrol.base.PrinterControlActivity
 [args]
 test.timeout.element=30
 test.uiMap.fileName=uiMap.xml
+test.language=zh_CN
+#en_US
