--- a/fwk/env/conf/log.conf
+++ b/fwk/env/conf/log.conf
@@ -1,15 +1,15 @@
 [loggers]
-keys=root,simpleExample
+keys=root,simpleExample,fileExample
 
 [handlers]
-keys=consoleHandler
+keys=consoleHandler,fileHandler
 
 [formatters]
-keys=simpleFormatter
+keys=simpleFormatter,fileFormatter
 
 [logger_root]
 level=DEBUG
-handlers=consoleHandler
+handlers=consoleHandler,fileHandler
 
 [logger_simpleExample]
 level=DEBUG
@@ -24,4 +24,20 @@ formatter=simpleFormatter
 args=(sys.stdout,)
 
 [formatter_simpleFormatter]
+format=%(asctime)s %(levelname)s - %(message)s
+
+
+
+[logger_fileExample]
+level=DEBUG
+qualname=main
+handlers=fileHandler
+
+[handler_fileHandler]
+class=logging.handlers.RotatingFileHandler
+level=DEBUG
+formatter=fileFormatter
+args=('AutoTestPass.log','a',20000,5,)
+
+[formatter_fileFormatter]
 format=%(asctime)s %(levelname)s - %(message)s
