--- a/fwk/env/conf/log.conf
+++ b/fwk/env/conf/log.conf
@@ -30,7 +30,7 @@ format=%(asctime)s %(levelname)s - %(message)s
 
 [logger_fileExample]
 level=DEBUG
-qualname=main
+qualname=fileExample
 handlers=fileHandler
 
 [handler_fileHandler]
