--- a/fwk/env/conf/log.conf
+++ b/fwk/env/conf/log.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,simpleExample,fileExample
+keys=root,simpleExample
 
 [handlers]
 keys=consoleHandler,fileHandler
@@ -13,7 +13,7 @@ handlers=consoleHandler,fileHandler
 
 [logger_simpleExample]
 level=DEBUG
-handlers=consoleHandler
+handlers=consoleHandler,fileHandler
 qualname=simpleExample
 propagate=0
 
@@ -28,10 +28,11 @@ format=%(asctime)s %(levelname)s - %(message)s
 
 
 
-[logger_fileExample]
-level=DEBUG
-qualname=fileExample
-handlers=fileHandler
+#[logger_fileExample]
+#level=DEBUG
+#qualname=fileExample
+#handlers=fileHandler
+#propagate=0
 
 [handler_fileHandler]
 class=logging.handlers.RotatingFileHandler
