--- a/fwk/env/conf/log.conf
+++ b/fwk/env/conf/log.conf
@@ -38,7 +38,7 @@ format=%(asctime)s %(levelname)s - %(message)s
 class=logging.handlers.RotatingFileHandler
 level=DEBUG
 formatter=fileFormatter
-args=('AutoTestPass.log','a',20000,5,)
+args=('AutoTestPass.log','a',5*1024*1024,5)
 
 [formatter_fileFormatter]
 format=%(asctime)s %(levelname)s - %(message)s
